<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        tools:context="com.example.rafael.diviaapp.MainActivity">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView"
            android:layout_width="307dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/autocomplete_hint"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_arret_temp_information"
        android:layout_width="match_parent"
        android:layout_height="120dp">


        <TextView
            android:id="@+id/textView_Ligne_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="2dp"
            android:paddingRight="6dp"
            android:text="@string/default_ligne"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_Arret_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/default_nom"
            app:layout_constraintStart_toEndOf="@+id/textView_Ligne_main"
            app:layout_constraintTop_toTopOf="@+id/textView_Ligne_main" />

        <TextView
            android:id="@+id/textView_Sens_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/default_sens"
            app:layout_constraintStart_toEndOf="@+id/textView_arrow_main"
            app:layout_constraintTop_toTopOf="@+id/textView_Arret_main" />

        <TextView
            android:id="@+id/textView_arrow_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="-->"
            app:layout_constraintStart_toEndOf="@+id/textView_Arret_main"
            app:layout_constraintTop_toTopOf="@+id/textView_Arret_main" />

        <TextView
            android:id="@+id/textView_time1_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/default_time1"
            app:layout_constraintStart_toStartOf="@+id/textView_Arret_main"
            app:layout_constraintTop_toBottomOf="@+id/textView_Arret_main" />

        <TextView
            android:id="@+id/textView_time2_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/default_time2"
            app:layout_constraintStart_toStartOf="@+id/textView_time1_main"
            app:layout_constraintTop_toBottomOf="@+id/textView_time1_main" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_arret_temp_no_data"
        android:layout_width="match_parent"
        android:layout_height="120dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/no_data"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_loading_same_pos_temp"
        android:layout_width="match_parent"
        android:layout_height="120dp">


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>